# MRL-HSL-Humanoid-Robot-Projects

./: README.md
Internship Tasks/2D Visualizer Using AStar/: README.md
Internship Tasks/Angle Sensor Model/: HelpWindow.cpp  README.md  Sensors.cpp  Sensors.hpp
Internship Tasks/Canny Edge Detector for Image/: README.md
Internship Tasks/Convex Hull/: ConvexHull.cpp
Internship Tasks/Convex Hull Pro/: README.md
Internship Tasks/Drawing and Resizing Shapes on Webcam with Qt5/: README.md  mainwindow.cpp
Internship Tasks/Histogram Equalizer Image on zynq/: README.md
Internship Tasks/Histogram Equalizer for Image/: README.md
Internship Tasks/Histogram Equalizer for WebCam/: HEW.cpp  README.md
Internship Tasks/Image Kernel with Padding/: vision.cpp
Internship Tasks/Image Tresholding/: README.md  test.cpp
Internship Tasks/Image kernel without Padding/: Identity.cpp  LICENSE  LeftSobel.cpp  README.md  RightSobel.py  Sharpen.cpp
Internship Tasks/Kalman Filter/: Configs.hpp  Filter.hpp  HelpWindow.hpp  Makefile  Model.cpp  Model.hpp  Planner.cpp  README.md  Sensors.cpp  World.hpp
Internship Tasks/Robot Controller Tools/: Robot.cpp  Robot.hpp  main.cpp
Internship Tasks/RoboticSoccerPlayGround/: README.md  SoccerGround.py
Internship Tasks/Webcam Thresholding/: WebcamTreshold.cpp  WebcamTreshold.py
Main Tasks/HSl OS/SheardMemory/PyShm/: CMakeLists.txt
Main Tasks/HSl OS/SheardMemory/PyShm/Representations/: ScalerVector.hpp  Shm.hpp  bindShmVector.hpp
Team Membership Tasks/: README.md
lvl1 - Team Membership Tasks/: README.md
(+151 files in other folders)
